# csc1103

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  meson.build  ruff.toml
.devcontainer/: devcontainer.json
gui/: example.c  main.py  tictactoe_grid.py  ttt_main_menu.py
gui/ui/: main_menu.py  tictactoe_grid.py  ttt_main_menu.py
gui/ui/c_code/: main.c  main_menu.c  main_menu.h  pick_difficulty.c  pick_difficulty.h  tic_tac_toe_grid.c  tic_tac_toe_grid.h
gui/ui/py_code/: demowindow.py  main.py  main_menu.py  tictactoe_grid.py
logic/: 2-player.c  2-player.py  board.c  board.h  board.py
minimax/: algo.py  minimax.c  minimax.h  minimax_test.c  tictactoe.py
ml/: algo.c  algo.py  dataset.h  dataset.py  naive_bayes.py  naive_bayes_model.json
ml/c/: algo.c  algo.h  ml.c  ml.h  trainer.c  trainer.h
resources/: CREDITS.md  builder.cmb  builder.ui  main_menu.ui  resources.gresource.xml  style.css
src/: meson.build  tictactoe.c
src/app/: audio.c  audio.h  board_gui.c  board_gui.h  game.c  game.h  gui.c  gui.h  main.c  main_menu.c  main_menu.h  option_menu.c  option_menu.h  utils.c  utils.h
src/cli/: main.c
src/ml/: benchmark.c  benchmark.h  cli.c  cli.h  dataset.c  dataset.h  main.c  statistics.c  statistics.h  training.c  training.h  winrate.c  winrate.h
src/shared/: board.c  board.h  minimax.c  minimax.h  naive_bayes.c  naive_bayes.h
